# pyembree

./: .authors.yml  .gitignore  .mailmap  .travis-install.sh  .travis.yml  AUTHORS  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  build.py  pyproject.toml  rever.xsh  setup.py
.github/workflows/: wheels.yml
ci/: embree.bash  embree.bat  embree.json  embree2.bash  embree2.bat  embree2.linux.bash  embree2.mac.bash  embree_linux.bash  embree_macos.bash  embree_windows.bat  fetch-embree.py  get_embree.bash
embreex/: mesh_construction.h  mesh_construction.pyx  rtcore.pyx  rtcore_geometry.pxd  rtcore_geometry_user.pxd  rtcore_ray.pxd  rtcore_scene.pxd  rtcore_scene.pyx  triangles.pyx
examples/: attenuate.py  intersection.py
news/: callbacks.rst  distance_query.rst  logging.rst  multi_mesh.rst  rever.rst  set_uniform_dist.rst  updates.rst
pyembree/: __init__.py  _version.py  callback_handler.pxd  callback_handler.pyx  mesh_construction.h  mesh_construction.pyx  rtcore.pxd  rtcore.pyx  rtcore_geometry.pxd  rtcore_geometry_user.pxd  rtcore_ray.pxd  rtcore_scene.pxd  rtcore_scene.pyx  trianges.pyx  triangles.pyx
pyembree/embree2/: rtcore_version.h
pyembree/embree2/lib/: embree.lib
recipes/embree/: build.sh  meta.yaml
recipes/pyembree/: build.sh  meta.yaml
scripts/: get_embree.bash
tests/: test_intersection.py
