[build-system]
requires = ["setuptools>=59.0", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pyembree"
version = "2.17.7"

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
pyembree = ["*.pxd"]
