[build-system]
requires = ["setuptools>=59.0", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pyembree"
version = "2.17.7"

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
pyembree = ["*.pxd"]

[tool.cibuildwheel]
skip =  "pp* *i686 *-win32 *musllinux*"
manylinux-x86-64-image = "manylinux_2_28"
before-build-linux =  "bash {project}/ci/embree2.linux.bash"
before-test = "pip install pytest"
test-command = "pytest -v {project}/tests"
before-build-windows = "pip install delvewheel"
repair-wheel-command-windows = "delvewheel repair --add-path embree2\\bin --no-mangle tbb12.dll;embree2.dll -w {dest_dir} {wheel}"
repair-wheel-command-macos = 'DYLD_LIBRARY_PATH="~/embree2/lib" delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}'
